# scientificprogramming

./: README.md
project/SciProgHF/src/: CMakeLists.txt
project/SciProgHF/src/abacus/: CMakeLists.txt  abadip.F  abalnr.F  abamolden.F  abanuc.F  abaop2.F  abaopt.F  abaortvec.F  abarint.F  abatro.F  abavib.F  abavrml.F  abawalk.F  carsph.F90  cbidip.h  cbinuc.h  cbione.h  cbitrp.h  cotabs.h  crossd.h  crsdir.h  derzer.h  dirprt.h  disbuf.h  doxyz.h  efield.h  expcom.h  facang.h  filemodule.F90  gdvec.h  gnrinf.h  her1ave.F  her1car.F  her1cat.F  her1drv.F  her1int.F  her1odc.F  her1out.F  her1pro.F  her1sym.F  (+46 more)
project/SciProgHF/src/amfi/: CMakeLists.txt  Regge.h  alphac.h  amfi.F  amfi1.F  amfi2.F  amfi3.F  datapow.h  dofuc.h  ired.h  para.h  param.h  relscf.F  relscf_crelop.h  relscf_dim.h  relscf_ijpair.h  relscf_v10.h  scfarr.h
project/SciProgHF/src/arducca/: README
project/SciProgHF/src/cfun/: CMakeLists.txt  dftsetcam.F  emb-functional.c  fortran_io.F90  fun-becke.c  fun-cam.c  fun-gga.c  fun-gllb_hole.c  fun-hjsx.c  fun-kin_pw91k.c  fun-kin_tf.c  fun-kin_vw.c  fun-kt.c  fun-lb94.c  fun-lbalpha.c  fun-lyp.c  fun-optx.c  fun-p86c.c  fun-pbec.c  fun-pbex.c  fun-pw86x.c  fun-pw91c.c  fun-pw91x.c  fun-pz81.c  fun-revpbex.c  fun-rpbex.c  fun-slater.c  fun-srpbec.c  fun-srvwn5.c  fun-tester.c  fun-vwn.c  functionals.c  functionals.h  general.c  general.h
project/SciProgHF/src/dirac/: CMakeLists.txt  atom2molecule_utils.F  dcbana.h  dcbind.h  dcbmvo.h  dcbpop.h  dcbreo.h  dcbrho.h  dcbrho1.h  dcbrot.h  dcbsph.h  dcbvec.h  dftaux.F  dirana.F  diraos.F  dirbss.F  dircnv.F  dirden.F  dirgeo.F  dirgp.F  dirgrd.F  dirimpmos.F90  dirmp2no.F  dirone.F  diropen.F  dirout.F  dirrdn.F  dirscf.F  dirset.F  dirsol.F  dirspf.F  dirtra.F  dirtwo.F  dirv1c.F  huckel.F
project/SciProgHF/src/dirrci/: CMakeLists.txt  cidirr.F  cigenp.F  cigosc.F  cimain.F  cosbit.h  files.inc  general.inc  goscom.h  iterat.inc  mempoint.inc  param.inc  symm.inc
project/SciProgHF/src/ecp/: CMakeLists.txt  inc_geninp.h  inc_mxvalue.h  inc_print.h  recp1.F  recp_chk.F90  recp_cso.F90  recp_cso_ang.F90  recp_cso_ps.F90  recp_cso_rad.F90  recp_cso_sub.F90  recp_cso_table.F90  recp_function1.F90  recp_function2.F90  recp_inp.F90  recp_inp_orb.F90  recp_inp_print.F90  recp_inp_read.F90  recp_ipt.F90  recp_lnk.F  recp_ntr.F90  recp_one.F90  recp_one_stvcz.F90  recp_one_sub.F90  recp_output.F90  recp_socfpd.F90  recp_write.F90
project/SciProgHF/src/embedding/: CMakeLists.txt  emb_cfg.F90  emb_data.F90  emb_dirac_evaluators.F90  emb_dirac_input.F90  emb_dirac_integration.F90  emb_export.F90  emb_input.F90  emb_io.F90  emb_mag_cfg.F90  emb_main.F90  emb_max_block_length.F90  emb_mpi.F90  emb_nadd_derv.F90  emb_quit.F  emb_types.F90  emb_xcfun_interface.F90  get_vemb_mat.F
project/SciProgHF/src/exacorr/: CMakeLists.txt  README.md  exacorr_ao_to_mo.F90  exacorr_cc.F90  exacorr_cfg.F90  exacorr_cholesky.F90  exacorr_datatypes.F90  exacorr_dirac.F  exacorr_eom.F90  exacorr_global.F90  exacorr_gradient.F90  exacorr_main.F90  exacorr_mo.F90  exacorr_respect.F90  exacorr_tensor_methods.F90  exacorr_utils.F90  intermediates.F90  mobasis_hartreefock.F90  mobasis_hartreefock_bak.F90  talsh_ao_to_mo.F90  talsh_cc.F90  talsh_common_routines.F90  talsh_eom.F90  talsh_gradient.F90
project/SciProgHF/src/gen1int/: CMakeLists.txt  DESIGN  INSTALL  MANUAL  README  TODO  gen1int_api.F90  gen1int_cube.F90  gen1int_host.F90  gen1int_host.h  gen1int_matrix.F90  gen1int_shell.F90
project/SciProgHF/src/gp/: 2gbdef.h  CMakeLists.txt  bucket_sort.h  codata.F90  debug_mem_alloc.F90  dirac_cfg.F90  dirac_mocoefficients.F90  dynamic_string.F90  electrostatic_potential.F90  exception_handling.F90  execinfo_bsd.c  execinfo_bsd.h  f77_work_interface.F90  file_handler.F90  finesort_scheme6.F  global_file.F  global_file.h  gp_q_diag.F90  gpc.c  gpdyall.F  gphjj.F  gpjeppe.F  gpjth.F  gpkrmc.F  gplucia.F  gplucia_io.F  gplupar.F  gpluuk.F  gpsaue.F  gpsk.F90  gptrygve.F  gpulfek.F  graphic.F  heapsort.F90  ibtdef.h  include_h_modules.F90  io.F  kinds.F90  machine_parameters.F90  matexport.F  (+53 more)
project/SciProgHF/src/grid/: CMakeLists.txt  Lebedev-Laikov.F  dftgrd.F  dftwrk.h  grtest.F  num_grid_cfg.F90  num_grid_gen.F90
project/SciProgHF/src/include/: aatens.h  abainf.h  ader.h  amfi_if.h  aosotr.h  aovec.h  argoscom.h  argoscomch.h  blocks.h  cbiher.h  cbihr1.h  cbihr2.h  cbilnr.h  cbione.h  cbirea.h  cbisol.h  cbitro.h  cbivib.h  cbiwlk.h  ccom.h  chrnos.h  chrsgn.h  chrxyz.h  codata.h  comdis.h  consts.h  cossya.h  csym1.h  dcb_rkbimp.h  dcbatom.h  dcbbas.h  dcbcls.h  dcbcosc.h  dcbdhf.h  dcbesr.h  dcbfir.h  dcbgascip.h  dcbgen.h  dcbgrd.h  dcbham.h  (+106 more)
project/SciProgHF/src/input/: CMakeLists.txt  README.rst  input_reader.F90  input_reader_sections.F90  parse_input.F90
project/SciProgHF/src/interest/: CMakeLists.txt  module_interest_interface.F90
project/SciProgHF/src/interface_mpi/: CMakeLists.txt  integer_kind_mpilib.F90  integer_model.F90  interface_to_mpi.F90  interface_to_mpi_f77.F  interface_to_mpi_f77_typedef.h
project/SciProgHF/src/krmc/: CMakeLists.txt  dcbbos.h  dcbnrt.h  gendet.c  krci_ctl.F  krmc_gradient.F  krmccan.F  krmcgascip.F  krmcgp.F  krmcinp.F  krmcluci.F  krmcmlf.F  krmcopt.F  krmcout.F  krmcsav.F  krmctra.F  krmcvec.F  mc_energies.F90  mcscf_routines.F90
project/SciProgHF/src/laplace/: CMakeLists.txt  lap_driver.F90  pamlaplce.F90
project/SciProgHF/src/localization/: CMakeLists.txt  func_PipekMezey.F90  localization_interface.F90  second_order_minimization.f90  select_coeff_own_bas.F90
project/SciProgHF/src/luciarel/: CMakeLists.txt  cands.inc  cgas.inc  cicisp.inc  ciinfo_r.F  cintfo.inc  clunit.inc  cprnt.inc  crun.inc  cstate.inc  ctcc.inc  diagonal_r.F  diagonalize_r.F  files_r.inc  gasci_main_driver_r.F  gasstr.inc  glbbas.inc  implicit.inc  integrals_off.inc  interface_r.F  io_r.F  io_ttss_r.F90  ipoist8.inc  krci_cfg.F90  krci_prop.F90  memory_r.F  memory_r.inc  mospinor_info.F90  mxpdim.inc  noccn_inf.inc  oper.inc  par_lucia_r.F  par_lushmem_r.F  par_solver_r.F  property_r.F  resolution_utils_r.F  (+10 more)
(+4698 files in other folders)
